# BevalZ-Veritas

./: .gitignore  README.md  paper_audit.py  pyproject.toml  requirements.txt
.trellis/spec/backend/: directory-structure.md  error-handling.md  quality-guidelines.md
.trellis/tasks/06-05-local-web-runner/: task.json
.trellis/tasks/06-05-web-runner-completion-actions/: prd.md  task.json
.trellis/tasks/06-05-web-runner-path-selection/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-01-create-andrej-karpathy-skill/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-02-cross-file-consistency-audit/: prd.md  task.json
.trellis/tasks/archive/2026-06/06-02-evidence-chain-audit/: prd.md  task.json
.trellis/workspace/Hao/: index.md  journal-1.md
tests/: test_core.py
veritas/: __init__.py  adapter_types.py  adapters.py  config.py  cross_file_consistency.py  desktop_gui.py  evaluation.py  evidence_chain.py  failed_diagnostics.py  fake_adapters.py  followups.py  http_client.py  image_audit_builder.py  image_cache.py  image_collection.py  image_detector_provider.py  image_local_analysis.py  image_reporting.py  image_selection.py  image_semantic_provider.py  legacy.py  limit_utils.py  markdown_utils.py  models.py  namespace_utils.py  pattern_updates.py  preflight.py  production_adapters.py  project_files.py  reference_audit.py  reference_online.py  reference_parsing.py  reference_reporting.py  report_action_context.py  report_action_panel.py  report_action_service.py  report_html_fragments.py  report_html_sections.py  report_markdown.py  report_schema.py  (+14 more)
(+11 files in other folders)
